Fix dark mode SVG icons for data URI imports
Add CSS selector for SVG images loaded as data URIs. Vite converts small SVG imports to data URIs, which weren't matched by the previous .svg file selector.

--- a/wp-content/themes/moehser-portfolio/assets/src/scss/main.scss
+++ b/wp-content/themes/moehser-portfolio/assets/src/scss/main.scss
@@ -132,19 +132,28 @@ body.theme-dark {
     fill: currentColor !important;
   }
   
+  // External SVG files
   img[src$=".svg"] {
     filter: brightness(0) invert(1) !important;
   }
   
-  .social img[src$=".svg"] {
+  // Inline SVG data URIs
+  img[src^="data:image/svg+xml"] {
     filter: brightness(0) invert(1) !important;
   }
   
-  .settings-gear img[src$=".svg"] {
+  .social img[src$=".svg"],
+  .social img[src^="data:image/svg+xml"] {
     filter: brightness(0) invert(1) !important;
   }
   
-  .projects__toggle-btn img[src$=".svg"] {
+  .settings-gear img[src$=".svg"],
+  .settings-gear img[src^="data:image/svg+xml"] {
+    filter: brightness(0) invert(1) !important;
+  }
+  
+  .projects__toggle-btn img[src$=".svg"],
+  .projects__toggle-btn img[src^="data:image/svg+xml"] {
     filter: brightness(0) invert(1) !important;
   }
 }
